--- a/app/src/main/res/layout/my_contact_item.xml
+++ b/app/src/main/res/layout/my_contact_item.xml
@@ -12,32 +12,20 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/teal_200"
+        card_view:cardBackgroundColor="#0098a6"
         card_view:cardCornerRadius="4dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvNama"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:text="kartu"
+            android:layout_marginStart="10dp"
+            android:textSize="26sp"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/tvNama"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="kartu"
-                android:layout_marginStart="10dp"
-                android:textSize="26sp"
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/tvNoHp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:text="kartu"
-                android:textSize="26sp"
-                tools:ignore="HardcodedText" />
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
