--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
     app:startDestination="@id/huruf">
-
     <fragment
         android:id="@+id/huruf"
-        android:name="com.example.recyclerview.Huruf"
-        android:label="fragment_huruf"
+        android:name="com.example.recyclerview.HurufFragment"
+        android:label="Huruf"
         tools:layout="@layout/fragment_huruf">
         <action
             android:id="@+id/action_huruf_to_kata"
@@ -16,6 +15,11 @@
     </fragment>
     <fragment
         android:id="@+id/kata"
-        android:name="com.example.recyclerview.Kata"
-        android:label="Kata" />
+        android:name="com.example.recyclerview.KataFragment"
+        android:label="@string/word_fragment_label"
+        tools:layout="@layout/fragment_kata">
+        <argument
+            android:name="huruf"
+            app:argType="string" />
+    </fragment>
 </navigation>
