--- a/app/src/main/res/layout/fragment_kata.xml
+++ b/app/src/main/res/layout/fragment_kata.xml
@@ -6,16 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/et_huruf"
-        android:hint="Masukkan huruf yang diinginkan"
-        android:inputType="text"
-        android:maxLength="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="Autofill,HardcodedText" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_kata"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
