--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -44,5 +44,24 @@
         <item>Jaguar warrior</item>
         <item>Janissary</item>
         <item>Jebel Barkal</item>
+        <item>Keshik</item>
+        <item>Llanero</item>
+        <item>Mamluk</item>
+        <item>Mandekalu Cavalry</item>
+        <item>Nau</item>
+        <item>Okihtcitaw</item>
+        <item>Panzer</item>
+        <item>Pracinha</item>
+        <item>Quinquereme</item>
+        <item>Sipahi</item>
+        <item>Tagma</item>
+        <item>Tercio</item>
+        <item>Turtle Ship</item>
+        <item>U-Boat</item>
+        <item>Venetian Arsenal</item>
+        <item>Voi Chien</item>
+        <item>Winged Hussars</item>
+        <item>Xerxes</item>
+        <item>Zhangye Danxia</item>
     </string-array>
 </resources>
